overflows almost fixed?

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     background: #1c313a;
 }
  
@@ -10,35 +10,63 @@ body{
     border-radius:5px;
     margin: 5% auto auto auto;
     padding: 10px;
-    text-align:center;
+    text-align: left;
+    position: relative;
     /*box-shadow: 5px 5px 10px #888888;*/
 }
  
-.chatBox {
+#chat-box {
     background:#455a64;
-    /*border-radius:5px;*/
-    width:90%;
+
+    width:100%;
     height:200px;
     margin:5% auto 5% auto;
-    /*border:1px solid;*/
-    /*border-color:#f4f4f4;*/
+
     overflow-y:auto;
 }
  
-.chatCell {
-    background:#455a64;
-    width:100%;
-    height:15%;
-    margin:auto auto 1px auto;
+.chatLine {
+    width: 100%;
+    display: inline-flex;
+}
+
+.chatUsername {
+    display: inline-block;
+    margin-right: 1em;
+}
+.chatText {
+    display: inline-block;
+    max-width: 100%;
+    height: auto;
+    /*background:#455a64;*/
+    /*width:100%;*/
+    /*height:30px;*/
+    padding: 0;
+    margin: 0;
+    /*margin:auto auto 1px auto;*/
 }
 
 #chat-form {
-    /*display: none;*/
+    width: 100%;
+    display: flex;
 }
-.btn{
-    background:#2ecc71;
-    height:30px;
+
+#chat-form > input {
+    height: 30px;
+    /*flex: auto;*/
+}
+#chat-input {
+    flex: 10;
+    padding: 0px 5px;
+    border: none;
+    /*font-size: 16px;*/
+}
+
+#chat-btn {
+    flex: 1;
+    background: green;
     color:white;
+    border: none;
     /*border-radius:4px;*/
 }
  
